# GitCpp

./: .gitignore  .gitmodules  CMakeLists.txt  Defaults.props  Defaults.vsprops  Git.cpp  Git.h  GitCpp.cpp  GitCpp.sln  GitCpp.vcproj  GitCpp.vcxproj  GitCpp.vcxproj.filters  ReadMe.txt  git2.vcxproj  git2.vcxproj.filters  libgit2.vcproj  libgit2.vcxproj  libgit2.vcxproj.filters  stdafx.cpp  stdafx.h
